2.10.0/todo/result_build_frontend.md

# Release Notes worksheet build_frontend

The main goal of this process is to rephrase all the commit messages below to make them **clear and easy to read** by the end user. You should follow the following instructions to do so:

* **Please clean up and format commit titles to be readable by the general PyTorch user.** Make sure you're [following the guidance here](https://docs.google.com/document/d/14OmgGBr1w6gl1VO47GGGdwrIaUNr92DFhQbY_NEk8mQ/edit)! Your resulting notes must be consistent and easy to read.
* Please sort commits into the following categories (you should not rename the categories!), I tried to pre-sort these to ease your work, feel free to move commits around if the current categorization is not good.
* Anything that is not public facing needs to be removed.
* If anything is miscategorized/belongs to another domain, move it to `miscategorized.md`.
* Please scan through `miscategorized.md` and handle any commits that belong within your domain according to these instructions.
* We place a lot of emphasis on the “BC-breaking” and “deprecation” sections. Those should be where the most effort goes in. The “improvements” and “bug fixes” for Python API should be nice as well.
* Once you are finished, move this very file from `todo/` to `done/` and submit a pull request.

The categories below are as follows:

* BC breaking: All commits that are BC-breaking. These are the most important commits. If any pre-sorted commit is actually BC-breaking, do move it to this section. Each commit should contain a paragraph explaining the rational behind the change as well as an example for how to update user code [BC-Guidelines](https://docs.google.com/document/d/14OmgGBr1w6gl1VO47GGGdwrIaUNr92DFhQbY_NEk8mQ/edit#heading=h.a9htwgvvec1m).
* Deprecations: All commits introducing deprecation. Each commit should include a small example explaining what should be done to update user code.
* new_features: All commits introducing a new feature (new functions, new submodule, new supported platform etc)
* improvements: All commits providing improvements to existing feature should be here (new backend for a function, new argument, better numerical stability)
* bug fixes: All commits that fix bugs and behaviors that do not match the documentation
* performance: All commits that are added mainly for performance (we separate this from improvements above to make it easier for users to look for it)
* documentation: All commits that add/update documentation
* Developers: All commits that are not end-user facing but still impact people that compile from source, develop into pytorch, extend pytorch, etc
* not user facing: All commits that are not public end-user facing and hence should be dropped from the release notes

## build_frontend
### bc breaking
### deprecation
### new features
### improvements
- [CMake] Remove forcing of `-O2` from `torch_compile_options` ([#164894](https://github.com/pytorch/pytorch/pull/164894))
- If USE_CUDA=1 is set, do not fallback to no CUDA ([#166982](https://github.com/pytorch/pytorch/pull/166982))
- Add support to enable the oneDNN backend for RISC-V ([#166602](https://github.com/pytorch/pytorch/pull/166602))
### bug fixes
- [BE] Fix `'_WIN32' is not defined` warning ([#162516](https://github.com/pytorch/pytorch/pull/162516))
- Don't use declarations in global namespace in stable headers ([#163352](https://github.com/pytorch/pytorch/pull/163352))
- [CMake] Fix `USE_FBGEMM_GENAI` option ([#164165](https://github.com/pytorch/pytorch/pull/164165))
- fix #166057: add tmp ptr to avoid gcc internal compiler error ([#165717](https://github.com/pytorch/pytorch/pull/165717))
- [CI] Workaround `relocation truncated to fit: R_AARCH64_CALL26` linker error ([#169723](https://github.com/pytorch/pytorch/pull/169723))
- [CI] Workaround `relocation truncated to fit: R_AARCH64_CALL26` linker error ([#169723](https://github.com/pytorch/pytorch/pull/169723))
### performance
### docs
- [Windows] Update libuv version from 1.39 to 1.51 ([#160318](https://github.com/pytorch/pytorch/pull/160318))
### devs
### Untopiced
- [build] Add LeakSanitizer option to CMake ([#158686](https://github.com/pytorch/pytorch/pull/158686))
- Fix THP_PyObject_VirtualFree return type ([#163763](https://github.com/pytorch/pytorch/pull/163763))
- Use inline instead of anon namespace for stableivalue from/to ([#164882](https://github.com/pytorch/pytorch/pull/164882))
- [ROCm] Custom OpenBLAS library name ([#166333](https://github.com/pytorch/pytorch/pull/166333))
- Fixed the cpp_builder error under riscv ([#167071](https://github.com/pytorch/pytorch/pull/167071))
### not user facing
- [CMake] Remove LLVM link code ([#134940](https://github.com/pytorch/pytorch/pull/134940))
- Make torch_nvshmem depends on  libtorch_cpu ([#169905](https://github.com/pytorch/pytorch/pull/169905))
- Fix fbgemm_genai build race condition by adding torch_cpu dependency ([#169994](https://github.com/pytorch/pytorch/pull/169994))
### security
